# lestinia

./: .gitignore  Cargo.toml  LICENSE  README.md
chat-cli/: Cargo.toml
chat-cli/src/: main.rs
client/: Cargo.toml
client/src/: error.rs  input.rs  lib.rs
common/: Cargo.toml
common/src/: clock.rs  lib.rs  state.rs  vol.rs
common/src/comp/: character.rs  mod.rs  phys.rs  (+2 more)
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server/src/: client.rs  error.rs  input.rs  lib.rs
voxygen/: .gitignore  Cargo.toml
voxygen/shaders/: character.frag  character.vert  figure.frag  figure.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  ui.frag  ui.vert
voxygen/shaders/test/: shader.frag  shader.vert
voxygen/src/: consts.rs  error.rs  global_consts.rs  key_state.rs  main.rs  render_ctx.rs  session.rs  window.rs
voxygen/src/anim/: mod.rs
voxygen/src/anim/character/: mod.rs  run.rs
voxygen/src/hud/: chat.rs
voxygen/src/menu/: test_hud.rs  title.rs  title_ui.rs
voxygen/src/mesh/: mod.rs  segment.rs  terrain.rs
voxygen/src/render/: consts.rs  mesh.rs  mod.rs  model.rs  renderer.rs  shader_set.rs  texture.rs  util.rs
voxygen/src/render/pipelines/: character.rs  figure.rs  mod.rs  skybox.rs  terrain.rs  ui.rs
voxygen/src/scene/: camera.rs  figure.rs  mod.rs  terrain.rs
voxygen/src/ui/: mod.rs  size_request.rs  span.rs  test.rs  title.rs
voxygen/src/ui/element/: image.rs  mod.rs
voxygen/src/ui/widgets/: toggle_button.rs
voxygen/test_assets/font/: OLF.txt  fonts.txt
world/: .gitignore  Cargo.toml
world/src/: lib.rs
(+22 files in other folders)
