[package]
name = "voxygen"
version = "0.1.0"
authors = ["grivo <notgrivo@gmail.com>"]
edition = "2018"

[features]
empty = ["rendy/empty"]
dx12 = ["rendy/dx12"]
metal = ["rendy/metal"]
vulkan = ["rendy/vulkan"]

default = ["empty"]

[dependencies]
common = { path = "../common" }

# gráficos
winit = "0.18"
rendy = { git = "https://github.com/omni-viral/rendy" }

# matemáticas
vek = "0.9"

# utilidade
glsl-include = "0.2"
failure = "0.1"
lazy_static = "1.1"